tests/NormalTests/paczka1/fuzzy1/62194450.err
Error in line 5: QnJ S190 29,7
Error in line 16: QnJ S807 162,85
Error in line 22: S634 S65 9,4
Error in line 3: MlKmMfEA S65 64,9
Error in line 35: 5CRew7 S634 14,2
